[Polyam] fix: Fix various UI text wrapping and overflow issues
Port 5dda094daa56dc13d50ac0734957ac5f6a9482de to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/accounts/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts/accounts.scss
@@ -274,14 +274,18 @@ a .account__avatar {
 
 .avatar-group {
   display: flex;
-  gap: 8px;
-  flex-wrap: wrap;
+
+  --avatar-height: 28px;
+
+  &:not(.avatar-group--compact) {
+    gap: 8px;
+    flex-wrap: wrap;
+    height: var(--avatar-height);
+    overflow-y: clip;
+  }
 }
 
 .avatar-group--compact {
-  gap: 0;
-  flex-wrap: nowrap;
-
   & > :not(:first-child) {
     margin-inline-start: -12px;
   }
